background color fixed, all alerts and visible JSON outputs removed, styling fixed, app functional

--- a/mobile_harvest_webapp/assets/css/basestyle.css
+++ b/mobile_harvest_webapp/assets/css/basestyle.css
@@ -1,3 +1,9 @@
+body{
+	width: 100%;
+	height: 100%;
+  background-color: #333;
+}
+
 #content_wrapper {
 	width: 400px;
 	height: 600px;
